--- a/TEST2/.settings/org.talend.repository.prefs
+++ b/TEST2/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=main
 repository.project.id=enc\:migration.token.encryption.key\:Hm289UdKdYhXqPDLoamuiPAI09tQe7JNYQ6Cm3jbUsmWNUwrC3ERbHI\=
